examples/tests/invalid/this.w
class A {
  static logThisId() {
    log(this.node.id);
      //^^^^ Unkown symbol "this" 
  }
}